output
sort_operations/push.c:30:30: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
void pa(t_stack **stack_a, **stack_b)
                             ^
sort_operations/push.c:30:6: error: conflicting types for 'pa'
void pa(t_stack **stack_a, **stack_b)
     ^
sort_operations/../push_swap.h:29:6: note: previous declaration is here
void pa(t_stack **stack_a, t_stack **stack_b);
     ^
sort_operations/push.c:32:7: warning: incompatible pointer types passing 'int **' to parameter of type 't_stack **' (aka 'struct s_stack **') [-Wincompatible-pointer-types]
        push(stack_b, stack_a);
             ^~~~~~~
sort_operations/push.c:3:28: note: passing argument to parameter 'send' here
static void push(t_stack **send, t_stack **receive)
                           ^
2 warnings and 1 error generated.
sort_operations/reverse_rotate.c:26:6: error: redefinition of 'rra'
void rra(t_stack **lst)
     ^
sort_operations/reverse_rotate.c:20:6: note: previous definition is here
void rra(t_stack **lst)
     ^
1 error generated.
